# stonefish_ros2_marine_robotics

./: README.md
SITL_Models/Gazebo/models/blueboat/: ____model.sdf  model.sdf
docker/: Dockerfile  build.sh  run.sh
gz_ws/src/move_blueboat/: package.xml  setup.py
gz_ws/src/move_blueboat/launch/: launch_robot_simulation.launch.py  launch_robot_simulation_with_rviz.launch.py
gz_ws/src/move_blueboat/move_blueboat/: 1_mpc_controller_for_boat_mission.py  (+43 more)
gz_ws/src/ros2_blue_interface/: package.xml  setup.cfg  setup.py
gz_ws/src/scripts/: ccw.sh  gps_topics_all_info.py  indvidual_test.py  test.py  test1.sh  test2.sh  test_fwd.sh  test_stop.sh  vehicle_data.json
sf_ws/: blueboat.txt  bluerov2.txt  bt_trace_mission.btlog  bt_trace_sequential.btlog  bt_tree_mission.xml  bt_tree_sequential.xml  mav.parm  mav.tlog  mav.tlog.raw
sf_ws/annotations_2024-10-12/: annotations_2024-10-12_21-00-02.txt  bluerov2.pcd
sf_ws/install/: local_setup.sh  setup.sh
sf_ws/log/: latest_build
sf_ws/src/cola2_msgs_ros2/: CMakeLists.txt
sf_ws/src/cola2_msgs_ros2/msg/: Landmark.msg
sf_ws/src/cola2_stonefish_ros2/: CMakeLists.txt  setup.cfg  setup.py
sf_ws/src/cola2_stonefish_ros2/data/: cliff.mtl
sf_ws/src/cola2_stonefish_ros2/launch/: asv_auv_sim.py  bluerov_fls_simulation.launch copy.py
sf_ws/src/cola2_stonefish_ros2/launch_ros1/: HW_REXROV2.launch  asv_usv_sim.launch  blueboat_simulation.launch  bluerov2_heavy_simulation.launch  bluerov2_unphy_alpha.launch  bluerov_fls_sim.launch  bluerov_simulation.launch  bluerov_simulation_mabpylib.launch  bluerov_simulation_opengym.launch  bluerov_simulation_opengym_nogui.launch  bluerov_stereo_simulation.launch  falcon_bravo7.launch  girona500_tank_simulation.launch
sf_ws/src/cola2_stonefish_ros2/scenarios/: blueboat.scn  blueboat_tank.scn  bluerov2_unphy_alpha_tank.scn  bluerov2_unphy_fls_tank.scn  bluerov_fls_tank.scn  bluerov_tank.scn  girona500.scn
sf_ws/src/cola2_stonefish_ros2/scripts/: ACE_object_sensing.py  magpy_subsea_cable.py  openmeteo.py
sf_ws/src/cola2_stonefish_ros2/src/: cola2_stonefish_node.cpp
sf_ws/src/extras_boat/: _ros2_simple_blueboat_interface.py  arm.py  boat_pos_request.py  check.py  disarm.py  indyvidual_motor_test.py  left_pwm_control.py  looping_control_robot.sh  motor_topic_test.sh  print_vehicle_info.py  pwm_control_servo_out.py  right_pwm_control.py  ros2_interfece_test.py  ros2_simple_blueboat_interface.py  servo_raw_check.py  set_to_guided.py  status_arm_disarm.py  test.py
sf_ws/src/extras_interface/: ros2_simple_bluerov2_interface.py  ros2_simple_interface.py
sf_ws/src/extras_rov/: arming_rov.py  check_by_topic.py  gps_read_and_convert.py  gps_topics_all_info.py  mission_ned.py  pos_req.py  position_data.py  print_abilities.py  read_pos_in_meters.py  ros2_run_rov_motion.py  run_rov_motion.py  stabilize_pos_req.py  test_motor_thrust.py  velo.py  wp_pos_req.py
sf_ws/src/stonefish_bluerov2/: CMakeLists.txt
stonefish/: CMakeLists.txt
(+183 files in other folders)
